modules/gdscript/tests/scripts/parser/errors/immutable_var_unassigned_class.gd
class A:
	let immutable_member: float

	func class_func(let immutable_param): # Case: assigned param immutable
		pass

func test():
	pass
